# smart-knob-rp2040

./: .gitignore  LICENSE  README.md
firmware/: CMakeLists.txt  board_pins.h  build_and_flash.sh  gc9a01_spi.c  gc9a01_spi.h  lv_conf.h  main.cpp  pico_sdk_import.cmake
firmware/scripts/: fw_memory_report.py
firmware/ui/: SQUARELINE_EXPORT_README.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
firmware/ui/components/: ui_comp_hook.c
firmware/ui/screens/: ui_Screen1.c  ui_Screen1.h
